# prufen

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  gazelle_repos.bzl  go.mod  go.sum
cjail/: BUILD.bazel  cjail-service.yaml  main.go
cjail/base/: Dockerfile  update.sh
cjail/proto/: BUILD.bazel  cjail.proto
docs/: CNAME
jail/js/: BUILD.bazel  main.go
jail/js/proto/: BUILD.bazel
jsjail/: BUILD.bazel  jsjail-service.yaml  main.go
jsjail/proto/: BUILD.bazel  jsjail.proto
nsjail/: BUILD.bazel
nsjail/base/: Dockerfile  update.sh
