load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/prufen/prufen
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=gazelle_repos.bzl%gazelle_repositories",
        "-prune",
    ],
    command = "update-repos",
)
