load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "cjail_lib",
    srcs = ["main.go"],
    importpath = "github.com/prufen/prufen/cjail",
    visibility = ["//visibility:private"],
    deps = [
        "//cjail/proto",
        "@com_github_jessevdk_go_flags//:go-flags",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "cjail",
    embed = [":cjail_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    base = "@cjail_image_base//image",
    binary = ":cjail",
)
