load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "cjail_lib",
    srcs = ["main.go"],
    importpath = "github.com/prufen/prufen/cjail",
    visibility = ["//visibility:private"],
    deps = [
        "//cjail/proto",
        "@com_github_jessevdk_go_flags//:go-flags",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "cjail",
    embed = [":cjail_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    base = "@cjail_image_base//image",
    binary = ":cjail",
)

container_push(
    name = "push_image",
    format = "Docker",
    image = ":image",
    # TODO: Make customizable.
    # Pushes europe-west1-docker.pkg.dev/prufen-dev/docker-repo/cjail:latest
    registry = "europe-west1-docker.pkg.dev",
    repository = "prufen-dev/docker-repo/cjail",
)
