load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_binary(
    name = "jsjail",
    embed = [":jsjail_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    base = "@jsjail_image_base//image",
    binary = ":jsjail",
)

go_library(
    name = "jsjail_lib",
    srcs = ["main.go"],
    importpath = "github.com/prufen/prufen/jsjail",
    visibility = ["//visibility:private"],
    deps = [
        "//jsjail/proto",
        "@com_rogchap_v8go//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)
