load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_binary(
    name = "jsjail",
    embed = [":jsjail_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    base = "@jsjail_image_base//image",
    binary = ":jsjail",
)

go_library(
    name = "jsjail_lib",
    srcs = ["main.go"],
    importpath = "github.com/prufen/prufen/jsjail",
    visibility = ["//visibility:private"],
    deps = [
        "//jsjail/proto",
        "@com_rogchap_v8go//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

container_push(
   name = "push_image",
   image = ":image",
   format = "Docker",
   # TODO: Make customizable.
   # Pushes europe-west1-docker.pkg.dev/prufen-dev/docker-repo/jsjail:latest
   registry = "europe-west1-docker.pkg.dev",
   repository = "prufen-dev/docker-repo/jsjail",
)
