load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "js_lib",
    srcs = ["main.go"],
    importpath = "github.com/prufen/prufen/jail/js",
    visibility = ["//visibility:private"],
    deps = [
        "//jail/js/proto",
        "@com_rogchap_v8go//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "js",
    embed = [":js_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    base = "@jsjail_image_base//image",
    binary = ":js",
)
